testsuite/tests/ghc-regress/rename/should_fail/rnfail010.hs

f x = 2

g x = 6

f x = 3
